# OT_DM

./: .gitignore  README.md  pyproject.toml
EOT/: EOT.py  costs.py  utils.py
scripts/: OT_nina_guillaume.html  OT_nina_guillaume.ipynb  OT_nina_guillaume.md  OT_nina_guillaume.py  data.csv  toy_example.py
