[tool.poetry]
name = "EOT"
version = "0.1.0"
description = "DM de Transport Optimal (MVA 2021)"
authors = ["Guillaume Peltier <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
tqdm = "^4.62.3"
numpy = ">=1.17,<1.20"
numba = "^0.54.1"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
jupytext = "^1.13.5"
nbdime = "^3.1.1"
ipywidgets = "^7.6.5"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.5"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
